syntax = "proto3";


package pb_external;


service Chronicle {

}