syntax = "proto3";


package pb_storage;


message Record {

}